--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">                  
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="#">Users</a>
+                            <a class="nav-link" aria-current="page" href="/admin/userManagement">User Management</a>
                         </li>
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="#">Categories</a>
+                            <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
                         </li>
                         <li class="nav-item fw-bold">
                             <a class="nav-link" aria-current="page" href="#">Products</a>
