--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -27,7 +27,7 @@
                             <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
                         </li>
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="#">Products</a>
+                            <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
                         </li>     
                         <li class="nav-item fw-bold">
                             <a class="nav-link" aria-current="page" href="#">Orders</a>
