--- a/views/userViews/landingPage.hbs
+++ b/views/userViews/landingPage.hbs
@@ -324,12 +324,7 @@
             <div class="pull-right">
               <ul class="userMenu">
                 <li>
-                  <a href="/signupLoginPage"><span class="hidden-xs">
-                      My Account</span>
-                    <i class="glyphicon glyphicon-user hide visible-xs"></i></a>
-                </li>
-                <li>
-                  <a href="/signupLoginPage" data-toggle="modal">
+                  <a href="/signupLoginPage">
                     <span class="hidden-xs">Sign In</span>
                     <i class="glyphicon glyphicon-log-in hide visible-xs"></i>
                   </a>
