--- a/views/userViews/signupLoginPage.hbs
+++ b/views/userViews/signupLoginPage.hbs
@@ -802,36 +802,40 @@
 
           <div class="col-xs-12 col-sm-6">
             <h2 class="block-title-2"> Create an account </h2>
-
             <form action="/otp" method="POST" role="form" class="regForm">
               <div class="form-group">
                 <label>Username</label>
-                <input name="username" title="Please enter your username (at least 3 characters)" type="text" class="form-control"
-                  placeholder="Enter name" required minlength="3">
+                <input name="username" title="Please enter your username (at least 3 characters)" type="text"
+                  class="form-control" placeholder="Enter name" required minlength="3">
               </div>
               <div class="form-group">
                 <label>Email address</label>
-                <input name="email" title="Please enter valid email" type="email" class="form-control" placeholder="Enter email"
-                  required>
+                <input name="email" title=" Please enter valid email" type="email" class="form-control"
+                  placeholder="Enter email" required>
               </div>
               <div class="form-group">
                 <label>Phone Number</label>
-                <input name="phonenumber" title="Please enter valid email" type="number" class="form-control"
+                <input name="phonenumber" minlength="10" maxlength="10" title=" Enter 10 numbers" type="tel" class="form-control"
                   placeholder="Enter phone number" required>
               </div>
               <div class="form-group">
                 <label>Password</label>
-                <input name="password" required id="password" minlength="5" title="Please enter your password, between 5 and 12 characters"
-                  type="password" class="form-control" placeholder="Password">
+                <input name="password" required id="password" minlength="5" maxlength="12"
+                  title="Please enter your password, between 5 and 12 characters" type="password" class="form-control"
+                  placeholder="Password">
               </div>
               <div class="form-group">
                 <label>Confirm Password</label>
-                <input required minlength="5" title="Please re-enter your password" id="confirmPass"
-                  type="password" class="form-control" placeholder="Confirm Password" data-rule-equalTo="#password">
+                <input required minlength="5" title="Paswords doesn't match" id="confirmPass" type="password"
+                  class="form-control" placeholder="Confirm Password" data-rule-equalTo="#password">
               </div>
               <div class="error">
               </div>
-
+              {{#if emailPhoneExists}}
+              <div class="form-group">
+              <label style="color: red;">Email/Phone Number already exists!</label>
+              </div>
+              {{/if}}
               <button type="submit" class="btn   btn-primary"><i class="fa fa-user"></i> Create an account
               </button>
             </form>
